--- a/Workshop 1 Syariff Kamil/Workshop 1 Syariff Kamil.vcxproj
+++ b/Workshop 1 Syariff Kamil/Workshop 1 Syariff Kamil.vcxproj
@@ -144,11 +144,11 @@
   <ItemGroup>
     <ClCompile Include="function.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="menuSelection.cpp" />
+    <ClCompile Include="arrowKeySelection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="function.h" />
-    <ClInclude Include="menuSelection.h" />
+    <ClInclude Include="arrowKeySelection.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
